<resources>
    <string name="app_name">Meu peso em outro planeta</string>
    <string name="jupiter"> Júpiter </string>
    <string name="lua"> Lua </string>
    <string name="marte"> Marte </string>
    <string name="mercurio"> Mercúrio </string>
    <string name="netuno"> Netuno </string>
    <string name="plutao"> Plutão </string>
    <string name="saturno"> Saturno </string>
    <string name="sol"> Sol </string>
    <string name="urano"> Urano </string>
    <string name="venus"> Vênus </string>
    <string name="jupiter1"> Seu peso em Júpiter é de Aproximadamente: </string>
    <string name="lua1"> Seu peso na Lua é de Aproximadamente: </string>
    <string name="marte1"> Seu peso em Marte é de Aproximadamente: </string>
    <string name="mercurio1"> Seu peso em Mercúrio é de Aproximadamente: </string>
    <string name="netuno1"> Seu peso em Netuno é de Aproximadamente: </string>
    <string name="plutao1"> Seu peso em Plutão é de Aproximadamente: </string>
    <string name="saturno1"> Seu peso em Saturno é de Aproximadamente: </string>
    <string name="sol1"> Seu Peso no Sol é de Aproximadamente: </string>
    <string name="urano1"> Seu peso em Urano é de Aproximadamente: </string>
    <string name="venus1">Seu peso em Vênus é de Aproximadamente:</string>
    <string name="jupiter2"> A força gravitacional de Júpiter aplicada em seu corpo é de aproximadamente: </string>
    <string name="lua2"> A força gravitacional da Lua aplicada em seu corpo é de aproximadamente: </string>
    <string name="marte2"> A força gravitacional de Marte aplicada em seu corpo é de aproximadamente: </string>
    <string name="mercurio2"> A força gravitacional de Mercúrio aplicada em seu corpo é de aproximadamente: </string>
    <string name="netuno2"> A força gravitacional de Netuno aplicada em seu corpo é de aproximadamente: </string>
    <string name="plutao2"> A força gravitacional de Plutão aplicada em seu corpo é de aproximadamente: </string>
    <string name="saturno2"> A força gravitacional de Saturno aplicada em seu corpo é de aproximadamente: </string>
    <string name="sol2"> A força gravitacional do Sol aplicada em seu corpo é de aproximadamente: </string>
    <string name="urano2"> A força gravitacional de Urano aplicada em seu corpo é de aproximadamente: </string>
    <string name="venus2"> A força gravitacional de Vênus aplicada em seu corpo é de aproximadamente: </string>
    <string name="detalhes"><b> Mais Detalhes:</b></string>
    <string name="setError"> Não pode ficar vazio </string>
    <string name="kg">Kg</string>
    <string name="newton">Newton</string>
    <string name="btncalcular">Calcular</string>
    <string name="coloque_seu_peso_aqui">Digite seu peso em KG</string>
    <string name="seu_peso_em_calisto_de_aproximadamente"> Seu peso em Calisto é de aproximadamente: </string>
    <string name="a_for_a_gravitacional_de_calisto_aplicada_em_seu_corpo_de_aproximadamente"> A força gravitacional de Calisto aplicada em seu corpo é de aproximadamente: </string>
    <string name="ceres_planeta_an_o"> Ceres </string>
    <string name="seu_peso_em_ceres_de_aproximadamente"> Seu peso em Ceres é de aproximadamente: </string>
    <string name="a_for_a_gravitacional_de_ceres_aplicada_em_seu_corpo_de_aproximadamente"> A força gravitacional de Ceres aplicada em seu corpo é de aproximadamente: </string>
    <string name="dione_sat_lite_de_saturno"> Dione </string>
    <string name="seu_peso_em_dione_de_aproximadamente"> Seu peso em Dione é de aproximadamente: </string>
    <string name="a_for_a_gravitacional_de_dione_aplicada_em_seu_corpo_de_aproximadamente"> A força gravitacional de Dione aplicada em seu corpo é de aproximadamente: </string>
    <string name="enc_lado_sat_lite_de_saturno"> Encélado </string>
    <string name="seu_peso_em_enc_lado_de_aproximadamente">Seu peso em Encélado é de aproximadamente:</string>
    <string name="a_for_a_gravitacional_de_enc_lado_aplicada_em_seu_corpo_de_aproximadamente"> A força gravitacional de Encélado aplicada em seu corpo é de aproximadamente: </string>
    <string name="ris_planeta_an_o"> Éris </string>
    <string name="a_for_a_gravitacional_de_ris_aplicada_em_seu_corpo_de_aproximadamente"> A força gravitacional de Éris aplicada em seu corpo é de aproximadamente: </string>
    <string name="europa_sat_lite_de_j_piter"> Europa </string>
    <string name="seu_peso_em_europa_de_aproximadamente"> Seu peso em Europa é de aproximadamente: </string>
    <string name="a_for_a_gravitacional_de_europa_aplicada_em_seu_corpo_de_aproximadamente"> A força gravitacional de Europa aplicada em seu corpo é de aproximadamente: </string>
    <string name="mercurio_detalhes">
            <b> Semi-Eixo Maior:</b> 57.909.050 km \n
            <b> Periélio:</b> 46.001.200 km \n
            <b> Afélio:</b> 69.816.900 km \n
            <b> Excentricidade:</b> 0,205630 \n
            <b> Período Orbital:</b> 87.969 Dias Terrestres \n
            <b> Período Sinódico:</b> 115.88 Dias Terrestres \n
            <b> Velocidade Orbital Média:</b> 47,362 km/s \n
            <b> Inclinação Com a Eclíptica:</b> 7.005º \n
            <b> Inclinação Com o Equador do Sol:</b> 3.38º \n
            <b> Inclinação Com o Plano Invariável:</b> 6.34° \n
            <b> Argumento do Periastro:</b> 29,124º \n
            <b> Longitude do Nó Ascendente:</b> 48,331º \n
            <b> Número de Satélites:</b> Nenhum \n
            <b> Diâmetro Equatorial:</b> 4.879,4 km \n
            <b> Área da Superfície:</b> 7,48×10^7 km² \n
            <b> Volume:</b> 6,083×10^10 km³ \n
            <b> Massa:</b> 3,3011×10^23 kg \n
            <b> Densidade Média:</b> 5,427 g/cm³ \n
            <b> Gravidade Superficial:</b> 3,78 m/s² \n
            <b> Período de Rotação:</b> 58.646 Dias Terrestres \n
            <b> Velocidade de Escape:</b> 4,25 km/s \n
            <b> Inclinação Axial:</b> 0,01º \n
            <b> Albedo:</b> 0,142 (geométrico) 0,068 (Bond) \n
            <b> Magnitude Aparente:</b> −2.6 para 5.7 \n
            <b> Temperatura Máxima:</b> 426,85 ºC \n
            <b> Temperatura Média:</b> 166,85 ºC \n
            <b> Temperatura Mínima:</b> -183,15 ºC \n
    </string>
    <string name="plutao_detalhes">
            <b> Semi-Eixo Maior:</b> 5.906.376.272 km \n
            <b> Periélio:</b> 4.436.824.613 km \n
            <b> Afélio:</b> 7.375.927.931 km \n
            <b> Excentricidade:</b> 0,24880766 \n
            <b> Período Orbital:</b> 248,09 Anos Terrestres \n
            <b> Período Sinódico:</b> 366,73 Dias Terrestres \n
            <b> Velocidade Orbital Média:</b> 4,666 km/s \n
            <b> Inclinação Eclíptica:</b> 17,14175° \n
            <b> Inclinação do Equador solar:</b> 11,88° \n
            <b> Argumento do Periastro:</b> 113,76329° \n
            <b> Longitude do nó Ascendente:</b> 110,30347° \n
            <b> Número de Satélites:</b> 5 \n
            <b> Diâmetro Médio:</b> 2374 ± 8 \n
            <b> Área da Superfície:</b> 1,665×10^7 km² \n
            <b> Volume:</b> 6,39×10^9 km³ \n
            <b> Massa:</b> (1,305 ± 0,007)×10^22 kg \n
            <b> Densidade Média:</b> 2,03 ± 0,06 g/cm³ \n
            <b> Gravidade Equatorial:</b> 0,658 m/s² \n
            <b> Período de Rotação:</b> 6 d 9 h 17 m 36 s \n
            <b> Velocidade de Escape:</b> 1,229 km/s \n
            <b> Inclinação Axial:</b> 119,591±0,014° \n
            <b> Albedo:</b> 0,49–0,66 \n
            <b> Magnitude Aparente:</b> 13,65 a 16,3 \n
            <b> Magnitude Absoluta:</b> -0,7 \n
            <b> Temperatura Máxima:</b> -218 ºC \n
            <b> Temperatura Média:</b> -229 ºC \n
            <b> Temperatura Mínima:</b> -240 ºC \n
    </string>
    <string name="sol_detalhes">
            <b> Distância Média da Terra:</b> 1,496×10^11 km \n
            <b> Magnitude Aparente:</b> −26,74 \n
            <b> Magnitude Absoluta:</b> 4,85 \n
            <b> Classificação Estelar:</b> G2V \n
            <b> Metalicidade:</b> Z = 0,0177 \n
            <b> Diâmetro Angular:</b> 31,6′ – 32,7′ \n
            <b> Adjetivo:</b> Solar \n
            <b> Distância Média do Centro da Gatáxia:</b> 26.000 Anos-Luz \n
            <b> Período Orbital Galáctico:</b> 2,50×10^8 Anos Terrestres \n
            <b> Velocidade:</b> ~2,20×10^5 m/s \n
            <b> Órbita em Torno do Centro da Galáxia:</b> ~2×104 m/s \n
            <b> Diâmetro Médio:</b> 1,392×10^9 km \n
            <b> Raio Equatorial:</b> 6,963×10^8 km \n
            <b> Circunferência Equatorial:</b> 4,379×10^9 km \n
            <b> Achatamento:</b> 9×10^−6 \n
            <b> Área de Superfície:</b> 6,0877×10^12 km² \n
            <b> Volume:</b> 1,412×10^18 km³ \n
            <b> Massa:</b> 1,9891×10^30 kg \n
            <b> Densidade Média:</b> 1,408×10^3 kg/m³ \n
            <b> Densidade do Núcleo:</b> 1,5×10^5 kg/m³ \n
            <b> Densidade da Base da Fotosfera:</b> 2×10^−4 kg/m³ \n
            <b> Base da Cromosfera:</b> 5×10^−6 kg/m³ \n
            <b> Coroa Solar:</b> 1×10^−12 kg/m³ \n
            <b> Gravidade na Superfície:</b> 274,0 m/s² \n
            <b> Velocidade de Escape:</b> 617,7 km/s \n
            <b> Temperatura da Superfície:</b> 5.778 K \n
            <b> Temperatura da Coroa Solar:</b> ~5×10^6 K \n
            <b> Temperatura do Núcleo:</b> ~15,7×10^6 K \n
            <b> Luminosidade:</b> 3,846×10^26 Whatts \n
            <b> Intensidade:</b> 2,009×10^7 W·m−2·sr−1 \n
            <b> Obliquidade Para a Eclíptica:</b> 7,25° \n
            <b> Obliquidade Para o Plano Galático:</b> 67,23° \n
            <b> Período de Rotação na Latitude:</b> 25,38 Dias Terrestres \n
            <b> Período de Rotação no Equador:</b> 25,05 Dias Terrestres \n
            <b> Período de Rotação nos Pólos:</b> 34,3 Dias Terrestres \n
            <b> Velocidade de Rotaçãono Equador:</b> 7,189×10^3 km/h
    </string>
    <string name="venus_detalhes">
            <b> Semi-Eixo Maior:</b> 108.208.930 km \n
            <b> Periélio:</b> 107.476.000 km \n
            <b> Afélio:</b> 108.942.000 km \n
            <b> Excentricidade:</b> 0,006772 \n
            <b> Período Orbital:</b> 224,701 Dias Terrestres \n
            <b> Período Sinódico:</b> 583,92 Dias Terrestres \n
            <b> Velocidade Orbital Média:</b> 35,02 km/s \n
            <b> Inclinação Com a eclíptica:</b> 3,39471º \n
            <b> Inclinação com o Equador do Sol:</b> 3,86 \n
            <b> Inclinação com o Plano invariável:</b> 2,19° \n
            <b> Argumento do Periastro:</b> 54,85229º \n
            <b> Longitude do Nó Ascendente:</b> 76,68069º \n
            <b> Número de Satélites:</b> Nenhum \n
            <b> Diâmetro Médio:</b> 12.103,6 km \n
            <b> Área da Superfície:</b> 4,60×10^8 km² \n
            <b> Volume:</b> 9,2843×10^10 km³ \n
            <b> Massa:</b> 4,8685×10^24 kg \n
            <b> Densidade Média:</b> 5,243 g/cm³ \n
            <b> Gravidade Superficial:</b> 8,87 m/s² \n
            <b> Período de Rotação:</b> 243,021 Dias Terrestres \n
            <b> Velocidade de Escape:</b> 10,36 km/s \n
            <b> Inclinação Axial:</b> 177,36º \n
            <b> Albedo:</b> 0,67 (geométrico) 0,90 (Bond) \n
            <b> Magnitude Aparente:</b> -4,6 \n
            <b> Temperatura Média:</b> 461 ºC \n
    </string>
    <string name="sobre">Sobre</string>
    <string name="como_calculamos">Como calculamos?</string>
    <string name="outros">Outros</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="qualificar_no_play_store">Qualificar no Play Store</string>
    <string name="merc_rio_nplaneta">Mercúrio - Planeta</string>
    <string name="plut_o_nplaneta_an_o">Plutão\nPlaneta Anão</string>
    <string name="sol_nestrela">Sol - Estrela</string>
    <string name="v_nus_nplaneta">Vênus - Planeta</string>
</resources>