<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mercurio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.edimilsonborges.seupesoemoutroplaneta.planetas.MercurioActivity"
    android:orientation="vertical"
    android:background="#ff000000">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:text="@string/merc_rio_nplaneta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="23sp"
                android:gravity="center"
                android:textAlignment="center"
                android:paddingBottom="10dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TextView
                    android:text="@string/mercurio1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textView3"
                    android:textColor="@color/colorPrimaryLight"
                    android:gravity="center"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textViewRMercurio"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/mercurio"
                    android:id="@+id/imageView2"
                    android:layout_gravity="center"
                    android:layout_weight="1" />

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/mercurio2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7"
                    android:textColor="@color/colorPrimaryLight"
                    android:gravity="center"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textViewRFMercurio"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textAlignment="center" />

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/detalhes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView13"
                    android:textColor="@color/colorPrimaryLight"
                    android:paddingTop="15dp" />

                <TextView
                    android:text="@string/mercurio_detalhes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView14"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginBottom="100dp"
                    android:textSize="10sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>